# tagger

./: Cargo.toml
backend/: Cargo.toml
backend/src/: lib.rs  structured_name.rs  structured_path.rs  tags.rs
backend/src/tests/: mod.rs
backend/src/timestamp/: configuration.rs  mod.rs
interface/: Cargo.toml
interface/i18n/en-GB/: tagger.ftl
interface/i18n/fr-FR/: tagger.ftl
interface/src/: cli.rs  i18n.rs  main.rs  tray_icon.rs
