[package]
name = "tagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General helpers
log.workspace = true
env_logger.workspace = true
# Translations
once_cell = "1.18.0"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.7.0"
rust-embed = "8"
unic-langid = "0.9"
fluent = "0.16.0"
# A command line interface to allow the user to choose how to run tagger.
clap = { version = "4.4.10", features = ["derive"] }
wild = "2"
ctrlc = "3.4.1"
# To display popup screens
egui = { version = "0.24.0" }
winit = { version = "0.29.4" }
# To maintain a background presence in the user GUI.
tray-icon = "0.11.0"
image = "0.24.7"
# Easier error handling
anyhow = "1.0"